[workspace]
resolver = "2"
members = [
    "flux",
    "flux-desktop",
    "flux-wasm",
    "flux-gl/flux",
    "flux-gl/flux-desktop",
    "flux-gl/flux-wasm",
]

[workspace.package]
version = "6.0.0"
description = "An open-source tribute to the macOS Drift screensaver"
edition = "2021"
license = "MIT"
license-file = "LICENSE"
homepage = "https://flux.sandydoo.me"
repository = "https://github.com/sandydoo/flux/"
authors = ["Sander Melnikov <hey@sandydoo.me"]

[workspace.dependencies.wgpu]
version = "24.0"

[workspace.dependencies.image]
features = ["jpeg", "png"]
version = "0.25"

[workspace.dependencies]
approx = "0.5.1"
env_logger = "0.11"
bytemuck = { version = "1.4", features = ["derive"] }
flux = { path = "./flux" }
futures = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
glam = "0.29.2"
half = { version = "2", features = ["bytemuck"] }
log = "0.4"
pollster = "0.4"
rand = { version = "0.9", features = ["thread_rng"] }
rand_pcg = "0.9"
rand_seeder = "0.4"
raw-window-handle = "0.6"
rustc-hash = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1.36.0", features = ["full"] }
winit = "0.30"

# wasm32
console_error_panic_hook = "0.1"
console_log = "1.0"
gloo-utils = { version = "0.2", features = ["serde"] }
js-sys = "0.3"
# Match with Nix version
wasm-bindgen = "=0.2.100"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"

# GL
glow = "0.13"
glutin = "0.28"

# The unoptimized build is too slow
[profile.dev.package.image]
opt-level = 3

[profile.release]
codegen-units = 1 # Allow further optimisations by disabling parallel compilation
lto = true        # Enable link-time optimisations
opt-level = "s"   # Optimise for size
panic = "abort"   # Strip expensive panic unwinding code
