[package]
name = "flux-desktop"
version.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish = false

[dependencies]
env_logger.workspace = true
flux.workspace = true
futures.workspace = true
image.workspace = true
log.workspace = true
pollster.workspace = true
raw-window-handle.workspace = true
serde_json.workspace = true
tokio.workspace = true
wgpu.workspace = true
winit.workspace = true
