[package]
name = "flux-wasm"
version = "4.6.1"
description = "An open-source tribute to the macOS Drift screensaver that runs in the browser"
authors = ["Sander Melnikov <hey@sandydoo.me"]
repository = "https://github.com/sandydoo/flux/"
license = "MIT"
publish = false
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
console_log = "1.0"
flux = { version = "4", path = "../flux" }
glow = "0.12.1"
js-sys = "0.3"
log = "0.4"
serde = { version = "1", features = ["derive"] }
gloo-utils = { version = "0.1", features = ["serde"] }
wasm-bindgen = { version = "=0.2.83" }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "OffscreenCanvas",
  "WebGlActiveInfo",
  "WebGlBuffer",
  "WebGlFramebuffer",
  "WebGlRenderbuffer",
  "WebGlUniformLocation",
  "WebGlVertexArrayObject",
  "WebGl2RenderingContext",
  "WebGlProgram",
  "WebGlShader",
  "WebGlTexture",
  "WebGlTransformFeedback",
  "Window",
]
