[package]
name = "flux-wasm"
version.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies.console_error_panic_hook]
workspace = true
optional = true

[dependencies]
console_log.workspace = true
flux.workspace = true
image.workspace = true
js-sys.workspace = true
log.workspace = true
serde.workspace = true
gloo-utils.workspace = true
wasm-bindgen.workspace = true
wgpu.workspace = true
winit.workspace = true
wasm-bindgen-futures.workspace = true

[dependencies.web-sys]
workspace = true
features = [
    "console",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "OffscreenCanvas",
    "Window",
]
