[package]
name = "flux-desktop"
version = "1.0.0"
description = "An ode to the macOS Drift screensaver"
authors = ["Sander Melnikov <hey@sandydoo.me"]
repository = "https://github.com/sandydoo/flux/"
license = "MIT"
publish = false
edition = "2021"

[dependencies]
flux = { version = "1", path = "../flux" }
glow = "0.11.2"
glutin = "0.28.0"
serde_json = "1"
