[package]
name = "flux"
version = "2.0.0"
description = "An ode to the macOS Drift screensaver"
authors = ["Sander Melnikov <hey@sandydoo.me"]
repository = "https://github.com/sandydoo/flux/"
license = "MIT"
publish = false
edition = "2021"

build = "build.rs"

[dependencies]
bytemuck = { version = "1.4", features = ["derive"] }
crevice = { version  = "0.8", features = [ "std", "nalgebra" ] }
glow = "0.11.2"
half = { version = "1.8", features = ["bytemuck"] }
nalgebra = { version = "0.31", features = [ "mint" ] }
mint = "0.5"
rustc-hash = "1.1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
