[package]
name = "flux-gl-desktop"
version = "4.6.0"
description = "An open-source tribute to the macOS Drift screensaver"
authors = ["Sander Melnikov <hey@sandydoo.me"]
repository = "https://github.com/sandydoo/flux/"
license.workspace = true
publish = false
edition = "2021"

[dependencies]
env_logger.workspace = true
flux = { version = "4", path = "../flux", package = "flux-gl"}
glow.workspace = true
glutin.workspace = true
serde_json.workspace = true
