[package]
name = "flux-gl-wasm"
version = "4.7.0"
description = "An open-source tribute to the macOS Drift screensaver that runs in the browser"
authors = ["Sander Melnikov <hey@sandydoo.me"]
repository = "https://github.com/sandydoo/flux/"
license.workspace = true
publish = false
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { workspace = true, optional = true }
console_log.workspace = true
flux = { version = "4", path = "../flux", package = "flux-gl" }
glow.workspace = true
js-sys.workspace = true
log.workspace = true
serde.workspace = true
gloo-utils.workspace = true
wasm-bindgen.workspace = true

[dependencies.web-sys]
workspace = true
features = [
  "console",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "ImageBitmap",
  "OffscreenCanvas",
  "WebGlActiveInfo",
  "WebGlBuffer",
  "WebGlFramebuffer",
  "WebGlRenderbuffer",
  "WebGlUniformLocation",
  "WebGlVertexArrayObject",
  "WebGl2RenderingContext",
  "WebGlProgram",
  "WebGlShader",
  "WebGlTexture",
  "WebGlTransformFeedback",
  "Window",
]
