[package]
name = "flux_next"
version = "5.0.0"
description = "An open-source tribute to the macOS Drift screensaver"
authors = ["Sander Melnikov <hey@sandydoo.me"]
repository = "https://github.com/sandydoo/flux/"
license = "MIT"
publish = false
edition = "2021"

[dependencies]
bytemuck = { version = "1.4", features = ["derive"] }
crevice = { version  = "0.12", features = [ "std", "nalgebra" ] }
getrandom = { version = "0.2", features = ["js"] }
half = { version = "2", features = ["bytemuck"] }
log = "0.4"
nalgebra = { version = "0.32", features = [ "mint" ] }
mint = "0.5"
rand = { version = "0.8.5", features = ["getrandom"] }
rustc-hash = "1.1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
image = { version = "0.24.5", features = ["jpeg", "png"] }
rand_seeder = "0.2.3"
rand_pcg = "0.3.1"
wgpu = { git = "https://github.com/gfx-rs/wgpu.git", branch = "trunk" }

